Fix alignment of user info on mobile Safari

--- a/src/components/AuthenticatedUser.module.scss
+++ b/src/components/AuthenticatedUser.module.scss
@@ -4,7 +4,7 @@
   font-size: 0.9em;
 }
 
-.link {
+.link, .userInfo {
   display: flex;
   align-items: center;
   margin: auto;
